--- a/config/database.yml
+++ b/config/database.yml
@@ -6,7 +6,7 @@
 #
 default: &default
   adapter: postgresql
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  encoding: unicode
 
 development:
   <<: *default
